--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <h1 id="level-title">Click Here to Start</h1>
     <p id="score"></p>
     <p id="high-score"></p>
+    <p id="inst1"></p>
+    <p id="inst2"></p>
+    <p id="inst3"></p>
+    <p id="inst4"></p>
+    <p id="inst5"></p>
+
     <div class="container">
       <div class="row">
         <div type="button" id="green" class="btn green"></div>
